<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textLeftTopCorner"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textRightTopCorner"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textLeftBottomCorner"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textRightBottomCorner"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textHelloEuheniy"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextHelloEuheniy"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_button"
        android:hint="@string/hint"
        />
    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextSend"
        android:layout_alignRight="@id/edit_message"
        android:layout_below="@id/edit_message"
        />

</RelativeLayout>